<resources>

    <string name="app_name">JLNicolaudieTest</string>

    <string name="login_box_title">Login</string>
    <string name="login_box_email">Email</string>
    <string name="login_box_password">Password</string>
    <string name="login_box_confirm">Confirm</string>
    <string name="login_box_name">Name</string>

    <string name="login_existing_account">Login with existing account</string>
    <string name="login_create_account">Create new account</string>

    <string name="login_action_create">Create account</string>
    <string name="login_action_login">Login</string>

</resources>
