<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="@dimen/login_box_width"
        android:layout_height="wrap_content"
        android:background="@color/login_box_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_box_title_padding"
            android:gravity="left|center_vertical"
            android:background="@color/login_box_title_background"
            android:textColor="@color/login_box_title_text"
            android:textSize="@dimen/login_box_title_text_size"
            android:text="@string/login_box_title"/>


        <!-- Email -->

        <LinearLayout
            android:layout_marginTop="@dimen/login_box_field_separation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_box_entry_field_height"
            android:background="@color/login_box_entry_field_background"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/login_box_entry_field_name_padding"
                android:gravity="left|center_vertical"
                android:textSize="@dimen/login_box_entry_field_name_text_size"
                android:text="@string/login_box_email"
                android:textColor="@color/login_box_entry_field_name_text"/>
            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:textSize="@dimen/login_box_entry_field_value_text_size"
                android:textColor="@color/login_box_entry_field_value_text"
                android:inputType="textWebEmailAddress"/>
        </LinearLayout>


        <!-- Password -->

        <LinearLayout
            android:layout_marginTop="@dimen/login_box_field_separation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_box_entry_field_height"
            android:background="@color/login_box_entry_field_background"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/login_box_entry_field_name_padding"
                android:gravity="left|center_vertical"
                android:textSize="@dimen/login_box_entry_field_name_text_size"
                android:text="@string/login_box_password"
                android:textColor="@color/login_box_entry_field_name_text"/>
            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:textSize="@dimen/login_box_entry_field_value_text_size"
                android:textColor="@color/login_box_entry_field_value_text"
                android:inputType="textPassword"/>
        </LinearLayout>


        <!-- Confirm -->

        <LinearLayout
            android:id="@+id/confirm_layout"
            android:layout_marginTop="@dimen/login_box_field_separation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_box_entry_field_height"
            android:background="@color/login_box_entry_field_background"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/login_box_entry_field_name_padding"
                android:gravity="left|center_vertical"
                android:textSize="@dimen/login_box_entry_field_name_text_size"
                android:text="@string/login_box_confirm"
                android:textColor="@color/login_box_entry_field_name_text"/>
            <EditText
                android:id="@+id/confirm_edit_text"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:textSize="@dimen/login_box_entry_field_value_text_size"
                android:textColor="@color/login_box_entry_field_value_text"
                android:inputType="textPassword"/>
        </LinearLayout>


        <!-- Name -->

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_marginTop="@dimen/login_box_field_separation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_box_entry_field_height"
            android:background="@color/login_box_entry_field_background"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/login_box_entry_field_name_padding"
                android:gravity="left|center_vertical"
                android:textSize="@dimen/login_box_entry_field_name_text_size"
                android:text="@string/login_box_name"
                android:textColor="@color/login_box_entry_field_name_text"/>
            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:textSize="@dimen/login_box_entry_field_value_text_size"
                android:textColor="@color/login_box_entry_field_value_text"/>
        </LinearLayout>


        <!-- Account mode -->

        <TextView
            android:id="@+id/account_mode_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/login_account_mode_padding"
            android:gravity="left|center_vertical"
            android:textColor="@color/login_box_entry_field_value_text"
            android:textSize="@dimen/login_box_entry_field_name_text_size"
            android:text="@string/login_existing_account"
            android:onClick="onAccountModeClicked"/>


        <!-- Action -->

        <LinearLayout
            android:layout_marginTop="@dimen/login_box_field_separation"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_action_button_height"
            android:background="@color/login_box_entry_field_background"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="match_parent"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:background="@color/login_action_button_background"
                android:src="@drawable/ic_done_green_24dp"
                android:padding="@dimen/login_box_entry_field_name_padding"
                android:onClick="onActionClicked">
                <LinearLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_done_green_24dp"
                        android:scaleType="fitCenter"/>
                    <TextView
                        android:id="@+id/action_description_text_view"
                        android:layout_marginLeft="@dimen/login_action_text_spacing"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="left|center_vertical"
                        android:textColor="@color/login_box_entry_field_value_text"
                        android:textSize="@dimen/login_box_entry_field_name_text_size"
                        android:text="@string/login_action_create"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>